gl51-master/src/test/deca/context/valid/testObject-initClass.deca
//Description
//Init class dans main

class A {}
{ A a = new A();}