gl51-master/src/test/deca/context/invalid/testObject_rule3_12.deca
//Description
//Deux parametrede la method sont identiques

class A {
    void method(int a, int a) {}
}
//releve erreur
